--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEB PAGE</title>
-    <link rel="styllesheet" type="text/css" href="style.css">
+    <title>Personal Data</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="about-container">
         <img src="image/IMG_20210809_122937_476~3.jpg" alt="Oge" 
         class="About Me" data-testid="slackDisplayImage" />
         <h1 data-testid="slackUserName">Ogechukwu Aina</h1>
-        <p data-testid="myTrack">Frontend Developer</p>
+        <h3="myTrack">Frontend Developer</h3>
     </div>
-        <div class="about-container">
+        <div class="Time-container">
             <p data-testid="currentDayOfTheeWeek">
             </p>
             <p data-testid="currentUTCTime">
             </p>
         </div>
-        <div class="about-container">
+        <div class="git-container">
             <a
              href="https://github.com/ogeitunu/HNG-STAGE-ONE"
              data-testid="githubURL" >GitHub Repository</a>
