--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="about-container">
+    <div class="container">
         <img src="image/IMG_20210809_122937_476~3.jpg" alt="Oge" 
         class="About Me" data-testid="slackDisplayImage" />
         <h1 data-testid="slackUserName">Ogechukwu Aina</h1>
