--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p data-testid="currentUTCTime">
             </p>
         </div>
-        <div class="git-container">
+        <div class="container">
             <a
              href="https://github.com/ogeitunu/HNG-STAGE-ONE"
              data-testid="githubURL" >GitHub Repository</a>
