--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 data-testid="slackUserName">Ogechukwu Aina</h1>
         <h3="myTrack">Frontend Developer</h3>
     </div>
-        <div class="container">
+        <div class="current-container">
             <p data-testid="currentDayOfTheeWeek">
             </p>
             <p data-testid="currentUTCTime">
