--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         class="About Me" data-testid="slackDisplayImage" />
         <h1 data-testid="slackUserName">Ogechukwu Aina</h1>
         <h3="myTrack">Frontend Developer</h3>
+        <div class="current">
         <p data-testid="currentDayOfTheeWeek">
             </p>
             <p data-testid="currentUTCTime">
             </p>
+        </div>
             <a
              href="https://github.com/ogeitunu/HNG-STAGE-ONE"
              data-testid="githubURL" >GitHub Repository</a>
