--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 data-testid="slackUserName">Ogechukwu Aina</h1>
         <h3="myTrack">Frontend Developer</h3>
         <div class="current">
-        <p data-testid="currentDayOfTheeWeek">
+        <p data-testid="currentDayOfTheWeek">
             </p>
             <p data-testid="currentUTCTime">
             </p>
