--- a/index.html
+++ b/index.html
@@ -7,22 +7,34 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Data</title>
+</head>
+<body>
+
     <div class="container">
         <img src="image/IMG_20210809_122937_476~3.jpg" alt="Oge" 
         class="About Me" data-testid="slackDisplayImage" />
         <h1 data-testid="slackUserName">Ogechukwu Aina</h1>
         <h3="myTrack">Frontend Developer</h3>
         <div class="current">
-        <p data-testid="currentDayOfTheWeek">
+            <p data-testid="currentDayOfTheWeek">
             </p>
             <p data-testid="currentUTCTime">
             </p>
         </div>
+        <div>
             <a
              href="https://github.com/ogeitunu/HNG-STAGE-ONE"
              data-testid="githubURL" >GitHub Repository</a>
         </div>
-        <script src="script.js"></script>
+    </div>
+
+            <script src="script.js"></script>
     
 </body>
 </html>
